Update presentation component styles for responsiveness and fix alignment in identity card component

--- a/src/app/shared/components/presentation/identidy-card/identidy-card.component.scss
+++ b/src/app/shared/components/presentation/identidy-card/identidy-card.component.scss
@@ -1,36 +1,36 @@
 @use '../../../styles/variables.scss' as *;
 
 .identity-card-container {
-    position: relative;
-    padding-top: 160px;
+    padding-top: clamp(11.25rem, 8.5vw + 9rem, 13.75rem);;
 
 }
 
 .identity-card-photo-container {
     position: absolute;
     left: 50%;
-    transform: translateX(-50%);
-    bottom: 160px;
-    width: 148px;
-    height: 147px;
+    top: 0;
+    left: 50%;
+    transform: translate(-50%, -80%);
+    width: clamp(9.375rem, 5.5vw + 8rem, 12.5rem);;
+    aspect-ratio: 1/1;
     overflow: hidden;
-    border-radius: 102px;
+    border-radius: 100%;
     border: 2px solid $color-tittle-icons;
     background: linear-gradient(0deg, rgba(0, 0, 0, 0.10) 0%, rgba(0, 0, 0, 0.10) 100%), url(../../../../../assets/images/foto.png) $color-tittle-icons 50% / cover no-repeat;
     box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.50) inset;
 }
 
 .identity-card-info-container {
+    position: relative;
     display: flex;
     flex-direction: column;
-    gap: 16px;
+    gap: clamp(1rem, 0.41vw + 0.9rem, 1.25rem);;
     font-family: 'Montserrat', sans-serif;
     color: $color-tittle-icons;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 20px;
+    font-size: clamp(1.25rem, 0.9vw + 1rem, 1.75rem);;
     font-weight: 400;
-    letter-spacing: 2px;
-    padding: 50px 30px;
+    letter-spacing: 0.2em;
+    padding: clamp(3.125rem, 1.95vw + 2.71rem, 4.375rem) clamp(1.875rem, 3.3vw + 1rem, 3.75rem);
     border-radius: 15px;
     background: rgba(0, 0, 0, 0.75);
     width: max-content;
@@ -41,18 +41,18 @@
     display: flex;
     flex-direction: column;
     font-weight: 600;
-    gap: 4px;
+    gap: 5px;
 }
 
 .identity-card-button {
     position: absolute;
     left: 50%;
-    transform: translateX(-50%);
-    bottom: -14px;
+    bottom: 0;
+    transform: translate(-50%, 50%);
     display: flex;
     align-items: center;
     border-radius: 30px;
-    border: 1px solid $color-tittle-icons;
+    border: 2px solid $color-tittle-icons;
     background-color: $color-tittle-icons;
     overflow: hidden;
     padding-right: 8px;
@@ -61,136 +61,22 @@
         background-color: $color-background1;
         color: $color-tittle-icons;
         font-family: 'Montserrat', sans-serif;
-        font-size: 12px;
+        font-size: clamp(0.75rem, 0.46vw + 0.63rem, 1rem);
         font-weight: 300;
-        letter-spacing: 0.6px;
-        padding: 8px 10px;
+        letter-spacing: 0.1em;
+        padding: 10px;
         border-top-right-radius: 50px;
-
-
     }
 
 }
 
 .identity-card-button-container-icon {
-    width: 25px;
-    height: 25px;
+    width: clamp(1.563rem, 0.65vw + 1.39rem, 1.875rem);;
+    height: auto;
 }
-
-@media screen and (min-width: 576px) {
-    .identity-card-container {
-        position: relative;
-        padding-top: 190px;
-    }
-
-    .identity-card-photo-container {
-        bottom: 170px;
-        width: 173px;
-        height: 171px;
-    }
-
-    .identity-card-info-container {
-        font-size: 24px;
-        letter-spacing: 2.4px;
-        gap: 16px;
-
-    }
-
-    .identity-card-button {
-        bottom: -20px;
-        padding-right: 8px;
-
-        p {
-            font-size: 14px;
-            letter-spacing: 0.8px;
-            padding: 10px 12px;
-        }
-
-    }
-
-    .identity-card-button-container-icon {
-        width: 28px;
-        height: 28px;
-    }
-}
-
-@media screen and (min-width: 768px) {}
-
 
 @media screen and (min-width: 992px) {
     .identity-card-container {
-        padding-top: 120px;
-    }
-}
-@media screen and (min-width: 1300px) {
-    .identity-card-container {
-        padding-top: 180px;
-    }
-    
-    .identity-card-photo-container {
-        width: 200px;
-        height: 201px; overflow: hidden;
-        bottom: 215px;
-    }
-    
-    .identity-card-info-container {
-        font-size: 28px;
-        padding: 65px 50px;
-        letter-spacing: 2.7px;
-        gap: 20px;
-    }
-    
-    .identity-card-info-subcontainer {
-        gap: 5px;
-    }
-    
-    .identity-card-button {
-        border: 2px solid $color-tittle-icons;
-        padding-right: 8px;
-    
-        p {
-            font-size: 16px;
-            letter-spacing: 0.8px;
-            padding: 10px 12px;
-        }
-    
-    }
-    
-    .identity-card-button-container-icon {
-        width: 30px;
-        height: 30px;
-    }
-}
-
-@media screen and (min-width: 1920px) {
-    .identity-card-container {
-        padding-top: 180px;
-    }
-    
-    .identity-card-photo-container {
-        width: 240px;
-        height: 241px; 
-        border-radius: 160px;
-        bottom: 290px;
-    }
-    
-    .identity-card-info-container {
-        font-size: 36px;
-        padding: 90px 65px;
-        letter-spacing: 3.6px;
-        gap: 26px;
-    }
-    .identity-card-button {
-        padding-right: 10px;
-        p {
-            font-size: 24px;
-            letter-spacing: 1.2px;
-            padding: 10px 16px;
-        }
-    }
-    
-    .identity-card-button-container-icon {
-        width: 36px;
-        height: 36px;
+        padding-top: 0;
     }
 }
