--- a/src/app/shared/components/presentation/presentation.component.scss
+++ b/src/app/shared/components/presentation/presentation.component.scss
@@ -17,8 +17,8 @@
     .presentation-container {
         flex-direction: row;
         justify-content: center;
-        align-items: flex-start;
+        align-items: center;
         min-height: 95dvh;
-        padding: 100px 30px 0px;
+        padding: 60px 30px 30px;
     }
 }
